listings/ch03-common-programming-concepts/no-listing-05-mut-cant-change-types/output.txt
$ cargo run
   Compiling variabili v0.1.0 (file:///progetti/variabili)
error[E0308]: mismatched types
 --> src/main.rs:4:13
  |
3 |     let mut spazi = "   ";
  |                     ----- expected due to this value
4 |     spazi = spazi.len();
  |             ^^^^^^^^^^^ expected `&str`, found `usize`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `variabili` (bin "variabili") due to 1 previous error
